# native-activity

./: .gitignore  hht2022.keystore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  main.cpp
app/src/main/cpp/shadertoy/: helloshadertoy.cpp  helloshadertoy.h
app/src/main/cpp/utils/: utils.cpp  utils.h
